@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -14,19 +13,19 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.security.authentication.TestingAuthenticationToken;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import com.ims.identity.dto.CreateUserRequest;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.ims.identity.dto.AddressDto;
+import com.ims.identity.dto.CreateUserRequestDto;
 import com.ims.identity.dto.UpdateUserRequest;
 import com.ims.identity.dto.UserResponse;
 import com.ims.identity.entities.Address;
@@ -38,6 +37,9 @@ import com.ims.identity.exceptions.ForbiddenException;
 import com.ims.identity.exceptions.ResourceNotFoundException;
 import com.ims.identity.repository.RoleRepository;
 import com.ims.identity.repository.UserRepository;
+import com.ims.platform.security.context.AuthenticationContext;
+import com.ims.platform.security.model.AuthenticatedUser;
+import com.ims.platform.security.model.DefaultAuthenticatedUser;
 
 @ExtendWith(MockitoExtension.class)
 class UserServiceImplTest {
@@ -51,31 +53,40 @@ class UserServiceImplTest {
 	@Mock
 	private PasswordEncoder passwordEncoder;
 
+	@Mock
+	private AuthenticationContext authenticationContext;
+
 	@InjectMocks
 	private UserServiceImpl userService;
 
 	private User admin;
-
 	private Role adminRole;
-
+	private AddressDto addressDto;
 	private Address address;
+	private UUID USER_ID;
+
+	private final ObjectMapper mapper = new ObjectMapper();
 
 	@BeforeEach
 	void setup() {
+
+		USER_ID = UUID.fromString("c0186249-9fc1-4927-97b3-a08a21febfe3");
 
 		adminRole = new Role();
 		adminRole.setId(1L);
 		adminRole.setName(RoleType.ADMIN);
 
-		address = Address.builder()
+		addressDto = AddressDto.builder()
 				.street("MG Road")
 				.state("Karnataka")
 				.country("India")
 				.pinCode("560001")
 				.build();
 
+		address = mapper.convertValue(addressDto, Address.class);
+
 		admin = User.builder()
-				.id(1L)
+				.id(USER_ID)
 				.firstName("Admin")
 				.lastName("User")
 				.email("admin@test.com")
@@ -83,40 +94,38 @@ class UserServiceImplTest {
 				.enabled(true)
 				.roles(Set.of(adminRole))
 				.build();
-
-		SecurityContextHolder.getContext()
-				.setAuthentication(
-						new TestingAuthenticationToken(
-								"admin@test.com",
-								null));
 	}
 
-	@AfterEach
-	void cleanup() {
-		SecurityContextHolder.clearContext();
+	private AuthenticatedUser authenticatedUser(String... authorities) {
+
+		return new DefaultAuthenticatedUser(
+				USER_ID.toString(),
+				"admin@test.com",
+				"admin",
+				List.of(authorities));
 	}
 
 	@Test
 	void createUser_ShouldCreateSuccessfully() {
 
-		CreateUserRequest request = new CreateUserRequest(
+		CreateUserRequestDto request = new CreateUserRequestDto(
+				"john@test.com",
 				"John",
 				"Doe",
-				"john@test.com",
 				"password",
 				LocalDate.of(2000, 1, 1),
 				"9999999999",
-				address,
+				addressDto,
 				RoleType.CUSTOMER);
 
 		Role customerRole = new Role();
 		customerRole.setName(RoleType.CUSTOMER);
 
+		when(authenticationContext.getCurrentUser())
+				.thenReturn(Optional.of(authenticatedUser("ROLE_ADMIN")));
+
 		when(userRepository.existsByEmail(request.email()))
 				.thenReturn(false);
-
-		when(userRepository.findByEmail("admin@test.com"))
-				.thenReturn(Optional.of(admin));
 
 		when(roleRepository.findByName(RoleType.CUSTOMER))
 				.thenReturn(Optional.of(customerRole));
@@ -125,7 +134,7 @@ class UserServiceImplTest {
 				.thenReturn("encoded-password");
 
 		when(userRepository.save(any(User.class)))
-				.thenAnswer(invocation -> invocation.getArgument(0));
+				.thenAnswer(i -> i.getArgument(0));
 
 		UserResponse response = userService.createUser(request);
 
@@ -140,15 +149,18 @@ class UserServiceImplTest {
 	@Test
 	void createUser_ShouldThrow_WhenEmailAlreadyExists() {
 
-		CreateUserRequest request = new CreateUserRequest(
+		CreateUserRequestDto request = new CreateUserRequestDto(
 				"John",
 				"Doe",
 				"john@test.com",
 				"password",
 				LocalDate.now(),
 				"9999999999",
-				address,
+				addressDto,
 				RoleType.CUSTOMER);
+
+		when(authenticationContext.getCurrentUser())
+				.thenReturn(Optional.of(authenticatedUser("ROLE_ADMIN")));
 
 		when(userRepository.existsByEmail(request.email()))
 				.thenReturn(true);
@@ -161,37 +173,26 @@ class UserServiceImplTest {
 	}
 
 	@Test
-	void createUser_ShouldAllowAgentToCreateCustomer() {
+	void createUser_ShouldAllowAgentToCreateUser() {
 
-		Role agentRole = new Role();
-		agentRole.setName(RoleType.AGENT);
-
-		User agent = User.builder()
-				.email("agent@test.com")
-				.roles(Set.of(agentRole))
-				.build();
-
-		SecurityContextHolder.getContext().setAuthentication(
-				new TestingAuthenticationToken("agent@test.com", null));
-
-		CreateUserRequest request = new CreateUserRequest(
+		CreateUserRequestDto request = new CreateUserRequestDto(
 				"Customer",
 				"One",
 				"customer@test.com",
 				"password",
 				LocalDate.now(),
 				"9999999999",
-				address,
+				addressDto,
 				RoleType.CUSTOMER);
 
 		Role customerRole = new Role();
 		customerRole.setName(RoleType.CUSTOMER);
 
+		when(authenticationContext.getCurrentUser())
+				.thenReturn(Optional.of(authenticatedUser("ROLE_AGENT")));
+
 		when(userRepository.existsByEmail(any()))
 				.thenReturn(false);
-
-		when(userRepository.findByEmail("agent@test.com"))
-				.thenReturn(Optional.of(agent));
 
 		when(roleRepository.findByName(RoleType.CUSTOMER))
 				.thenReturn(Optional.of(customerRole));
@@ -210,34 +211,20 @@ class UserServiceImplTest {
 	}
 
 	@Test
-	void createUser_ShouldThrow_WhenAgentCreatesAdmin() {
+	void createUser_ShouldThrow_WhenCurrentUserIsCustomer() {
 
-		Role agentRole = new Role();
-		agentRole.setName(RoleType.AGENT);
-
-		User agent = User.builder()
-				.email("agent@test.com")
-				.roles(Set.of(agentRole))
-				.build();
-
-		SecurityContextHolder.getContext().setAuthentication(
-				new TestingAuthenticationToken("agent@test.com", null));
-
-		CreateUserRequest request = new CreateUserRequest(
-				"Admin",
-				"User",
-				"newadmin@test.com",
+		CreateUserRequestDto request = new CreateUserRequestDto(
+				"John",
+				"Doe",
+				"john@test.com",
 				"password",
 				LocalDate.now(),
 				"9999999999",
-				address,
-				RoleType.ADMIN);
+				addressDto,
+				RoleType.CUSTOMER);
 
-		when(userRepository.existsByEmail(any()))
-				.thenReturn(false);
-
-		when(userRepository.findByEmail("agent@test.com"))
-				.thenReturn(Optional.of(agent));
+		when(authenticationContext.getCurrentUser())
+				.thenReturn(Optional.of(authenticatedUser("ROLE_CUSTOMER")));
 
 		assertThrows(
 				ForbiddenException.class,
@@ -255,54 +242,96 @@ class UserServiceImplTest {
 		List<UserResponse> users = userService.getAllUsers();
 
 		assertEquals(1, users.size());
-		assertEquals("admin@test.com", users.get(0).email());
+		assertEquals("admin@test.com", users.getFirst().email());
 
 		verify(userRepository).findAll();
 	}
 
 	@Test
+	void getAllUsersWithIds_ShouldReturnUsers() {
+
+		when(userRepository.findByIdIn(List.of(USER_ID)))
+				.thenReturn(List.of(admin));
+
+		List<UserResponse> users = userService.getAllUsersWithIds(List.of(USER_ID));
+
+		assertEquals(1, users.size());
+		assertEquals(USER_ID, users.getFirst().id());
+
+		verify(userRepository).findByIdIn(List.of(USER_ID));
+	}
+
+	@Test
 	void getUserById_ShouldReturnUser() {
 
-		when(userRepository.findById(1L))
+		when(userRepository.findById(USER_ID))
 				.thenReturn(Optional.of(admin));
 
-		UserResponse response = userService.getUserById(1L);
+		UserResponse response = userService.getUserById(USER_ID);
 
-		assertEquals(1L, response.id());
+		assertEquals(USER_ID, response.id());
 		assertEquals("admin@test.com", response.email());
 
-		verify(userRepository).findById(1L);
+		verify(userRepository).findById(USER_ID);
 	}
 
 	@Test
 	void getUserById_ShouldThrow_WhenUserNotFound() {
 
-		when(userRepository.findById(anyLong()))
+		when(userRepository.findById(USER_ID))
 				.thenReturn(Optional.empty());
 
 		assertThrows(
 				ResourceNotFoundException.class,
-				() -> userService.getUserById(100L));
+				() -> userService.getUserById(USER_ID));
+	}
+
+	@Test
+	void getUserByEmail_ShouldReturnUser() {
+
+		when(userRepository.findByEmail("admin@test.com"))
+				.thenReturn(Optional.of(admin));
+
+		UserResponse response = userService.getUserByEmail("admin@test.com");
+
+		assertEquals("admin@test.com", response.email());
+
+		verify(userRepository).findByEmail("admin@test.com");
+	}
+
+	@Test
+	void getUserByEmail_ShouldThrow_WhenUserNotFound() {
+
+		when(userRepository.findByEmail("admin@test.com"))
+				.thenReturn(Optional.empty());
+
+		assertThrows(
+				ResourceNotFoundException.class,
+				() -> userService.getUserByEmail("admin@test.com"));
 	}
 
 	@Test
 	void updateUser_ShouldUpdateSuccessfully() {
 
+		Address existingAddress = new Address();
+		existingAddress.setId(1L);
+		admin.setAddress(existingAddress);
+
 		UpdateUserRequest request = new UpdateUserRequest(
 				"Updated",
 				"User",
 				"8888888888",
-				address,
+				addressDto,
 				LocalDate.of(1998, 1, 1),
 				true);
 
-		when(userRepository.findById(1L))
+		when(userRepository.findById(USER_ID))
 				.thenReturn(Optional.of(admin));
 
 		when(userRepository.save(any(User.class)))
 				.thenAnswer(i -> i.getArgument(0));
 
-		UserResponse response = userService.updateUser(1L, request);
+		UserResponse response = userService.updateUser(USER_ID, request);
 
 		assertEquals("Updated", response.firstName());
 		assertEquals("User", response.lastName());
@@ -318,16 +347,16 @@ class UserServiceImplTest {
 				"Updated",
 				"User",
 				"9999999999",
-				address,
+				addressDto,
 				LocalDate.now(),
 				true);
 
-		when(userRepository.findById(anyLong()))
+		when(userRepository.findById(USER_ID))
 				.thenReturn(Optional.empty());
 
 		assertThrows(
 				ResourceNotFoundException.class,
-				() -> userService.updateUser(1L, request));
+				() -> userService.updateUser(USER_ID, request));
 	}
 
 	@Test
@@ -335,10 +364,10 @@ class UserServiceImplTest {
 
 		admin.setAddress(address);
 
-		when(userRepository.findById(1L))
+		when(userRepository.findById(USER_ID))
 				.thenReturn(Optional.of(admin));
 
-		userService.deleteUser(1L);
+		userService.deleteUser(USER_ID);
 
 		assertTrue(admin.isDeleted());
 		assertTrue(admin.getAddress().isDeleted());
@@ -351,10 +380,10 @@ class UserServiceImplTest {
 
 		admin.setAddress(null);
 
-		when(userRepository.findById(1L))
+		when(userRepository.findById(USER_ID))
 				.thenReturn(Optional.of(admin));
 
-		userService.deleteUser(1L);
+		userService.deleteUser(USER_ID);
 
 		assertTrue(admin.isDeleted());
 
@@ -364,14 +393,13 @@ class UserServiceImplTest {
 	@Test
 	void deleteUser_ShouldThrow_WhenUserNotFound() {
 
-		when(userRepository.findById(anyLong()))
+		when(userRepository.findById(USER_ID))
 				.thenReturn(Optional.empty());
 
 		assertThrows(
 				ResourceNotFoundException.class,
-				() -> userService.deleteUser(1L));
+				() -> userService.deleteUser(USER_ID));
 
 		verify(userRepository, never()).save(any());
 	}
-
 }
